[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://img/trimmed_bullet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.33519
height = 4.55271

[node name="Bullet" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -2.38419e-007, 2.38419e-007 )
scale = Vector2( 0.65, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Bullet_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_Bullet_body_shape_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
